--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,12 @@
   box-sizing: border-box;
 }
 
+html,
+body,
+#root,
+.app {
+  height: 100%;
+  background: lightpink ;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+}
