--- a/client/src/ClientPanel/components/Profile/css/ProfilePage.css
+++ b/client/src/ClientPanel/components/Profile/css/ProfilePage.css
@@ -109,3 +109,24 @@ a {
     text-decoration: none;
 }
 
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Ensure it appears on top of other content */
+}
+
+.popup-content {
+    max-width: 500px;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
+}
