--- a/client/src/ClientPanel/components/Forms/css/Register.css
+++ b/client/src/ClientPanel/components/Forms/css/Register.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url('../../../assets/img/bg/BG.jpg');
+    background-image: url('../../../assets/img/bg/BGG.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
