--- a/client/src/ClientPanel/components/Profile/css/ProfilePage.css
+++ b/client/src/ClientPanel/components/Profile/css/ProfilePage.css
@@ -130,3 +130,20 @@ a {
     padding: 20px;
     box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
 }
+
+.modal {
+    overflow: scroll;
+}
+
+#custom-modal-width {
+    max-width: 900px;
+}
+
+.btn-primary {
+    background-color: #f5593d;
+    border-color: #f5593d;
+}
+.btn-primary:hover {
+    background-color: #e74d32;
+    border-color: #e74d32;
+}
